// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compliance Resolver Mutation Correctly Resolves Delete Compliance Mutation 1`] = `
Object {
  "data": Object {
    "deleteCompliance": "deleted-resource",
  },
}
`;

exports[`Compliance Resolver Mutation Correctly Resolves Delete Compliance Mutation with no resources 1`] = `
Object {
  "data": Object {
    "deleteCompliance": "deleted-resource",
  },
}
`;

exports[`Compliance Resolver Mutation Error on Delete Compliance Mutation with invalid resource selfLink 1`] = `
Object {
  "data": Object {
    "deleteCompliance": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "INTERNAL_SERVER_ERROR",
      },
      "locations": Array [
        Object {
          "column": 15,
          "line": 3,
        },
      ],
      "message": "GRC ERROR: Unable to delete application resource(s) - [{\\"message\\":\\"There was an error.\\"}]",
      "path": Array [
        "deleteCompliance",
      ],
    },
  ],
}
`;

exports[`Compliance Resolver Mutation Error on Delete Compliance Mutation with invalid selfLink argument 1`] = `
Object {
  "data": Object {
    "deleteCompliance": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "INTERNAL_SERVER_ERROR",
      },
      "locations": Array [
        Object {
          "column": 15,
          "line": 3,
        },
      ],
      "message": "GRC ERROR 400 - There was an error.",
      "path": Array [
        "deleteCompliance",
      ],
    },
  ],
}
`;

exports[`Compliance Resolver Query Correctly Resolves Compliance List Query 1`] = `
Object {
  "data": Object {
    "compliances": Array [
      Object {
        "annotations": Object {
          "categories": "-",
          "controls": "-",
          "standards": "-",
        },
        "clusterCompliant": "-",
        "metadata": null,
        "name": "",
        "namespace": "",
        "placementBindings": Array [],
        "placementPolicies": Array [],
        "policyCompliant": "0/0",
        "raw": Object {},
        "remediation": "",
      },
      Object {
        "annotations": Object {
          "categories": "-",
          "controls": "-",
          "standards": "-",
        },
        "clusterCompliant": "0/2/0",
        "metadata": Object {
          "annotations": null,
          "name": "policy-certificatepolicy",
          "namespace": "policy-namespace",
          "resourceVersion": "3666045",
          "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/policy-namespace/policies/policy-certificatepolicy",
        },
        "name": "policy-certificatepolicy",
        "namespace": "policy-namespace",
        "placementBindings": Array [],
        "placementPolicies": Array [],
        "policyCompliant": "0/2",
        "raw": Object {
          "apiVersion": "policy.open-cluster-management.io/v1",
          "kind": "Policy",
          "metadata": Object {
            "creationTimestamp": "2019-09-03T18:34:05Z",
            "finalizers": Array [
              "finalizer.policies.ibm.com",
              "propagator.finalizer.mcm.ibm.com",
            ],
            "generation": 24,
            "name": "policy-certificatepolicy",
            "namespace": "policy-namespace",
            "resourceVersion": "3666045",
            "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/policy-namespace/policies/policy-certificatepolicy",
            "uid": "68d772b1-ce79-11e9-a1ed-005056a0b88e",
          },
          "spec": Object {
            "complianceType": "musthave",
            "namespaces": Object {
              "exclude": Array [
                "kube-*",
              ],
              "include": Array [
                "default",
              ],
            },
            "policy-templates": Array [
              Object {
                "objectDefinition": Object {
                  "apiVersion": "policies.ibm.com/v1alpha1",
                  "kind": "CertificatePolicy",
                  "metadata": Object {
                    "label": Object {
                      "category": "System-Integrity",
                    },
                    "name": "certificate-policy-example",
                  },
                  "spec": Object {
                    "minimumDuration": "300h",
                    "namespaceSelector": Object {
                      "exclude": Array [],
                      "include": Array [
                        "default",
                      ],
                    },
                    "remediationAction": "inform",
                    "severity": "low",
                  },
                },
                "status": Object {
                  "Validity": Object {},
                },
              },
            ],
            "remediationAction": "inform",
          },
          "status": Object {
            "consoleURL": "https://console-openshift-console.apps.cluster1.dev08.red-chesterfield.com",
            "placementBindings": Array [
              "binding-policy-certificatepolicy",
            ],
            "placementPolicies": Array [
              "placement-policy-certificatepolicy",
            ],
            "status": Object {
              "cluster1": Object {
                "aggregatePoliciesStatus": Object {
                  "policy-certificatepolicy": Object {
                    "compliant": "Compliant",
                  },
                },
                "clustername": "cluster1",
                "compliant": "Compliant",
              },
              "clusterhub": Object {
                "aggregatePoliciesStatus": Object {
                  "policy-certificatepolicy": Object {
                    "compliant": "Compliant",
                  },
                },
                "clustername": "clusterhub",
                "compliant": "Compliant",
              },
            },
          },
        },
        "remediation": "inform",
      },
      Object {
        "annotations": Object {
          "categories": "SystemAndCommunicationsProtections",
          "controls": "MutationAdvisor",
          "standards": "FISMA",
        },
        "clusterCompliant": "2/3/1",
        "metadata": Object {
          "annotations": Object {
            "policy.open-cluster-management.io/categories": "SystemAndCommunicationsProtections",
            "policy.open-cluster-management.io/controls": "MutationAdvisor",
            "policy.open-cluster-management.io/standards": "FISMA",
          },
          "name": "policy-iampolicy",
          "namespace": "policy-namespace",
          "resourceVersion": "3664798",
          "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/policy-namespace/policies/policy-iampolicy",
        },
        "name": "policy-iampolicy",
        "namespace": "policy-namespace",
        "placementBindings": Array [],
        "placementPolicies": Array [],
        "policyCompliant": "2/2",
        "raw": Object {
          "apiVersion": "policy.open-cluster-management.io/v1",
          "kind": "Policy",
          "metadata": Object {
            "annotations": Object {
              "policy.open-cluster-management.io/categories": "SystemAndCommunicationsProtections",
              "policy.open-cluster-management.io/controls": "MutationAdvisor",
              "policy.open-cluster-management.io/standards": "FISMA",
            },
            "creationTimestamp": "2019-08-30T14:58:31Z",
            "finalizers": Array [
              "finalizer.policies.ibm.com",
              "propagator.finalizer.mcm.ibm.com",
            ],
            "generation": 22,
            "name": "policy-iampolicy",
            "namespace": "policy-namespace",
            "resourceVersion": "3664798",
            "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/policy-namespace/policies/policy-iampolicy",
            "uid": "a18d825a-cb36-11e9-a1eb-005056a0b88e",
          },
          "spec": Object {
            "complianceType": "musthave",
            "namespaces": Object {
              "exclude": Array [
                "kube-*",
              ],
              "include": Array [
                "default",
              ],
            },
            "policy-templates": Array [
              Object {
                "objectDefinition": Object {
                  "apiVersion": "iam.policies.ibm.com/v1alpha1",
                  "kind": "IamPolicy",
                  "metadata": Object {
                    "label": Object {
                      "category": "System-Integrity",
                    },
                    "name": "iam-policy-example",
                  },
                  "spec": Object {
                    "maxClusterRoleBindingUsers": 5,
                    "maxRoleBindingViolationsPerNamespace": 2,
                    "namespaceSelector": Object {
                      "exclude": Array [
                        "kube-system",
                      ],
                      "include": Array [
                        "default",
                        "kube-*",
                      ],
                    },
                    "remediationAction": "inform",
                    "severity": "medium",
                  },
                },
                "status": Object {
                  "Validity": Object {},
                },
              },
            ],
            "remediationAction": "inform",
          },
          "status": Object {
            "placementBindings": Array [
              "binding-policy-iampolicy",
            ],
            "placementPolicies": Array [
              "placement-policy-iampolicy",
            ],
            "status": Object {
              "cluster1": Object {
                "aggregatePoliciesStatus": Object {
                  "policy-iampolicy": Object {
                    "compliant": "NonCompliant",
                  },
                },
                "clustername": "cluster1",
                "compliant": "NonCompliant",
              },
              "clusterhub": Object {
                "aggregatePoliciesStatus": Object {
                  "policy-iampolicy": Object {
                    "compliant": "NonCompliant",
                  },
                },
                "clustername": "clusterhub",
                "compliant": "NonCompliant",
              },
              "consoleURL": "https://console-openshift-console.apps.cluster1.dev08.red-chesterfield.com",
            },
          },
        },
        "remediation": "inform",
      },
      Object {
        "annotations": Object {
          "categories": "SystemAndCommunicationsProtections",
          "controls": "VA",
          "standards": "FISMA, TEST",
        },
        "clusterCompliant": "2/3/1",
        "metadata": Object {
          "annotations": Object {
            "policy.open-cluster-management.io/categories": "SystemAndCommunicationsProtections",
            "policy.open-cluster-management.io/controls": "VA",
            "policy.open-cluster-management.io/standards": "FISMA, TEST",
            "seed-generation": "4",
          },
          "name": "policy-image",
          "namespace": "policy-namespace",
          "resourceVersion": "3459900",
          "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/policy-namespace/policies/policy-image",
        },
        "name": "policy-image",
        "namespace": "policy-namespace",
        "placementBindings": Array [],
        "placementPolicies": Array [],
        "policyCompliant": "2/2",
        "raw": Object {
          "apiVersion": "policy.open-cluster-management.io/v1",
          "kind": "Policy",
          "metadata": Object {
            "annotations": Object {
              "policy.open-cluster-management.io/categories": "SystemAndCommunicationsProtections",
              "policy.open-cluster-management.io/controls": "VA",
              "policy.open-cluster-management.io/standards": "FISMA, TEST",
              "seed-generation": "4",
            },
            "creationTimestamp": "2019-08-30T13:46:19Z",
            "finalizers": Array [
              "finalizer.policies.ibm.com",
              "propagator.finalizer.mcm.ibm.com",
            ],
            "generation": 27,
            "name": "policy-image",
            "namespace": "policy-namespace",
            "resourceVersion": "3459900",
            "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/policy-namespace/policies/policy-image",
            "uid": "8be1a627-cb2c-11e9-a1eb-005056a0b88e",
          },
          "spec": Object {
            "complianceType": "musthave",
            "namespaces": Object {
              "exclude": Array [
                "kube-*",
              ],
              "include": Array [
                "default",
              ],
            },
            "object-templates": Array [
              Object {
                "complianceType": "musthave",
                "objectDefinition": Object {
                  "apiVersion": "securityenforcement.admission.cloud.ibm.com/v1beta1",
                  "kind": "ClusterImagePolicy",
                  "metadata": Object {
                    "name": "mongo",
                  },
                  "spec": Object {
                    "repositories": Array [
                      Object {
                        "name": "docker.io/mongo",
                      },
                    ],
                  },
                },
                "status": Object {
                  "Validity": Object {},
                },
              },
            ],
            "remediationAction": "inform",
          },
          "status": Object {
            "placementBindings": Array [
              "binding-policy-image",
            ],
            "placementPolicies": Array [
              "placement-policy-image",
            ],
            "status": Object {
              "cluster1": Object {
                "aggregatePoliciesStatus": Object {
                  "policy-image": Object {
                    "compliant": "NonCompliant",
                  },
                },
                "clustername": "cluster1",
                "compliant": "NonCompliant",
              },
              "clusterhub": Object {
                "aggregatePoliciesStatus": Object {
                  "policy-image": Object {
                    "compliant": "NonCompliant",
                  },
                },
                "clustername": "clusterhub",
                "compliant": "NonCompliant",
              },
              "consoleURL": "https://console-openshift-console.apps.cluster1.dev08.red-chesterfield.com",
            },
          },
        },
        "remediation": "inform",
      },
      Object {
        "annotations": Object {
          "categories": "SystemAndCommunicationsProtections",
          "controls": "CertManager",
          "standards": "HIPAA",
        },
        "clusterCompliant": "2/2/0",
        "metadata": Object {
          "annotations": Object {
            "policy.open-cluster-management.io/categories": "SystemAndCommunicationsProtections",
            "policy.open-cluster-management.io/controls": "CertManager",
            "policy.open-cluster-management.io/standards": "HIPAA",
            "seed-generation": "1",
          },
          "name": "policy-limitrange",
          "namespace": "policy-namespace",
          "resourceVersion": "3489357",
          "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/policy-namespace/policies/policy-limitrange",
        },
        "name": "policy-limitrange",
        "namespace": "policy-namespace",
        "placementBindings": Array [],
        "placementPolicies": Array [],
        "policyCompliant": "2/2",
        "raw": Object {
          "apiVersion": "policy.open-cluster-management.io/v1",
          "kind": "Policy",
          "metadata": Object {
            "annotations": Object {
              "policy.open-cluster-management.io/categories": "SystemAndCommunicationsProtections",
              "policy.open-cluster-management.io/controls": "CertManager",
              "policy.open-cluster-management.io/standards": "HIPAA",
              "seed-generation": "1",
            },
            "creationTimestamp": "2019-09-04T16:27:02Z",
            "finalizers": Array [
              "propagator.finalizer.mcm.ibm.com",
              "finalizer.policies.ibm.com",
            ],
            "generation": 7,
            "name": "policy-limitrange",
            "namespace": "policy-namespace",
            "resourceVersion": "3489357",
            "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/policy-namespace/policies/policy-limitrange",
            "uid": "d358638d-cf30-11e9-a1ed-005056a0b88e",
          },
          "spec": Object {
            "complianceType": "musthave",
            "namespaces": Object {
              "exclude": Array [
                "kube-*",
              ],
              "include": Array [
                "default",
              ],
            },
            "object-templates": Array [
              Object {
                "complianceType": "musthave",
                "objectDefinition": Object {
                  "apiVersion": "v1",
                  "kind": "LimitRange",
                  "metadata": Object {
                    "name": "mem-limit-range",
                  },
                  "spec": Object {
                    "limits": Array [
                      Object {
                        "default": Object {
                          "memory": "512Mi",
                        },
                        "defaultRequest": Object {
                          "memory": "256Mi",
                        },
                        "type": "Container",
                      },
                    ],
                  },
                },
                "status": Object {
                  "Validity": Object {},
                },
              },
            ],
            "remediationAction": "inform",
          },
          "status": Object {
            "consoleURL": "https://console-openshift-console.apps.cluster1.dev08.red-chesterfield.com",
            "placementBindings": Array [
              "binding-policy-limitrange",
            ],
            "placementPolicies": Array [
              "placement-policy-limitrange",
            ],
            "status": Object {
              "cluster1": Object {
                "aggregatePoliciesStatus": Object {
                  "policy-limitrange": Object {
                    "compliant": "NonCompliant",
                  },
                },
                "clustername": "cluster1",
                "compliant": "NonCompliant",
              },
              "clusterhub": Object {
                "aggregatePoliciesStatus": Object {
                  "policy-limitrange": Object {
                    "compliant": "NonCompliant",
                  },
                },
                "clustername": "clusterhub",
                "compliant": "NonCompliant",
              },
            },
          },
        },
        "remediation": "inform",
      },
      Object {
        "annotations": Object {
          "categories": "SystemAndCommunicationsProtections",
          "controls": "policy",
          "standards": "FISMA",
        },
        "clusterCompliant": "2/2/0",
        "metadata": Object {
          "annotations": Object {
            "policy.open-cluster-management.io/categories": "SystemAndCommunicationsProtections",
            "policy.open-cluster-management.io/controls": "policy",
            "policy.open-cluster-management.io/standards": "FISMA",
            "seed-generation": "1",
          },
          "name": "policy-namespace",
          "namespace": "policy-namespace",
          "resourceVersion": "3665885",
          "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/policy-namespace/policies/policy-namespace",
        },
        "name": "policy-namespace",
        "namespace": "policy-namespace",
        "placementBindings": Array [],
        "placementPolicies": Array [],
        "policyCompliant": "2/2",
        "raw": Object {
          "apiVersion": "policy.open-cluster-management.io/v1",
          "kind": "Policy",
          "metadata": Object {
            "annotations": Object {
              "policy.open-cluster-management.io/categories": "SystemAndCommunicationsProtections",
              "policy.open-cluster-management.io/controls": "policy",
              "policy.open-cluster-management.io/standards": "FISMA",
              "seed-generation": "1",
            },
            "creationTimestamp": "2019-09-03T18:26:11Z",
            "finalizers": Array [
              "propagator.finalizer.mcm.ibm.com",
              "finalizer.policies.ibm.com",
            ],
            "generation": 22,
            "name": "policy-namespace",
            "namespace": "policy-namespace",
            "resourceVersion": "3665885",
            "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/policy-namespace/policies/policy-namespace",
            "uid": "4e21e5e7-ce78-11e9-a1ed-005056a0b88e",
          },
          "spec": Object {
            "complianceType": "musthave",
            "namespaces": Object {
              "exclude": Array [
                "kube-*",
              ],
              "include": Array [
                "default",
              ],
            },
            "object-templates": Array [
              Object {
                "complianceType": "musthave",
                "objectDefinition": Object {
                  "apiVersion": "v1",
                  "kind": "Namespace",
                  "metadata": Object {
                    "name": "prod",
                  },
                },
                "status": Object {
                  "Validity": Object {},
                },
              },
            ],
            "remediationAction": "inform",
          },
          "status": Object {
            "consoleURL": "https://console-openshift-console.apps.cluster1.dev08.red-chesterfield.com",
            "placementBindings": Array [
              "binding-policy-namespace",
            ],
            "placementPolicies": Array [
              "placement-policy-namespace",
            ],
            "status": Object {
              "cluster1": Object {
                "aggregatePoliciesStatus": Object {
                  "policy-namespace": Object {
                    "compliant": "NonCompliant",
                  },
                },
                "clustername": "cluster1",
                "compliant": "NonCompliant",
              },
              "clusterhub": Object {
                "aggregatePoliciesStatus": Object {
                  "policy-namespace": Object {
                    "compliant": "NonCompliant",
                  },
                },
                "clustername": "clusterhub",
                "compliant": "NonCompliant",
              },
            },
          },
        },
        "remediation": "inform",
      },
      Object {
        "annotations": Object {
          "categories": "SystemAndCommunicationsProtections",
          "controls": "MutationAdvisor",
          "standards": "FISMA",
        },
        "clusterCompliant": "2/2/0",
        "metadata": Object {
          "annotations": Object {
            "policy.open-cluster-management.io/categories": "SystemAndCommunicationsProtections",
            "policy.open-cluster-management.io/controls": "MutationAdvisor",
            "policy.open-cluster-management.io/standards": "FISMA",
            "seed-generation": "1",
          },
          "name": "policy-pod",
          "namespace": "policy-namespace",
          "resourceVersion": "3729666",
          "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/policy-namespace/policies/policy-pod",
        },
        "name": "policy-pod",
        "namespace": "policy-namespace",
        "placementBindings": Array [],
        "placementPolicies": Array [],
        "policyCompliant": "2/2",
        "raw": Object {
          "apiVersion": "policy.open-cluster-management.io/v1",
          "kind": "Policy",
          "metadata": Object {
            "annotations": Object {
              "policy.open-cluster-management.io/categories": "SystemAndCommunicationsProtections",
              "policy.open-cluster-management.io/controls": "MutationAdvisor",
              "policy.open-cluster-management.io/standards": "FISMA",
              "seed-generation": "1",
            },
            "creationTimestamp": "2019-09-05T18:16:29Z",
            "finalizers": Array [
              "finalizer.policies.ibm.com",
              "propagator.finalizer.mcm.ibm.com",
            ],
            "generation": 7,
            "name": "policy-pod",
            "namespace": "policy-namespace",
            "resourceVersion": "3729666",
            "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/policy-namespace/policies/policy-pod",
            "uid": "48316272-d009-11e9-a1ed-005056a0b88e",
          },
          "spec": Object {
            "complianceType": "musthave",
            "namespaces": Object {
              "exclude": Array [
                "kube-*",
              ],
              "include": Array [
                "default",
              ],
            },
            "object-templates": Array [
              Object {
                "complianceType": "musthave",
                "objectDefinition": Object {
                  "apiVersion": "v1",
                  "kind": "Pod",
                  "metadata": Object {
                    "name": "nginx-pod",
                  },
                  "spec": Object {
                    "containers": Array [
                      Object {
                        "image": "nginx:1.7.9",
                        "name": "nginx",
                        "ports": Array [
                          Object {
                            "containerPort": 80,
                          },
                        ],
                      },
                    ],
                  },
                },
                "status": Object {
                  "Validity": Object {},
                },
              },
            ],
            "remediationAction": "inform",
          },
          "status": Object {
            "placementBindings": Array [
              "binding-policy-pod",
            ],
            "placementPolicies": Array [
              "placement-policy-pod",
            ],
            "status": Object {
              "cluster1": Object {
                "aggregatePoliciesStatus": Object {
                  "policy-pod": Object {
                    "compliant": "NonCompliant",
                  },
                },
                "clustername": "cluster1",
                "compliant": "NonCompliant",
              },
              "clusterhub": Object {
                "aggregatePoliciesStatus": Object {
                  "policy-pod": Object {
                    "compliant": "NonCompliant",
                  },
                },
                "clustername": "clusterhub",
                "compliant": "NonCompliant",
              },
            },
          },
        },
        "remediation": "inform",
      },
      Object {
        "annotations": Object {
          "categories": "SystemAndCommunicationsProtections",
          "controls": "MutationAdvisor",
          "standards": "FISMA",
        },
        "clusterCompliant": "2/2/0",
        "metadata": Object {
          "annotations": Object {
            "policy.open-cluster-management.io/categories": "SystemAndCommunicationsProtections",
            "policy.open-cluster-management.io/controls": "MutationAdvisor",
            "policy.open-cluster-management.io/standards": "FISMA",
            "seed-generation": "1",
          },
          "name": "policy-rolebinding-1",
          "namespace": "policy-namespace",
          "resourceVersion": "3665889",
          "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/policy-namespace/policies/policy-rolebinding-1",
        },
        "name": "policy-rolebinding-1",
        "namespace": "policy-namespace",
        "placementBindings": Array [],
        "placementPolicies": Array [],
        "policyCompliant": "2/2",
        "raw": Object {
          "apiVersion": "policy.open-cluster-management.io/v1",
          "kind": "Policy",
          "metadata": Object {
            "annotations": Object {
              "policy.open-cluster-management.io/categories": "SystemAndCommunicationsProtections",
              "policy.open-cluster-management.io/controls": "MutationAdvisor",
              "policy.open-cluster-management.io/standards": "FISMA",
              "seed-generation": "1",
            },
            "creationTimestamp": "2019-09-04T13:08:49Z",
            "finalizers": Array [
              "finalizer.policies.ibm.com",
              "propagator.finalizer.mcm.ibm.com",
            ],
            "generation": 25,
            "name": "policy-rolebinding-1",
            "namespace": "policy-namespace",
            "resourceVersion": "3665889",
            "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/policy-namespace/policies/policy-rolebinding-1",
            "uid": "22ac9660-cf15-11e9-a1ed-005056a0b88e",
          },
          "spec": Object {
            "complianceType": "musthave",
            "namespaces": Object {
              "exclude": Array [
                "kube-*",
              ],
              "include": Array [
                "default",
              ],
            },
            "object-templates": Array [
              Object {
                "complianceType": "musthave",
                "objectDefinition": Object {
                  "apiVersion": "rbac.authorization.k8s.io/v1",
                  "kind": "RoleBinding",
                  "metadata": Object {
                    "name": "operate-pods-rolebinding",
                  },
                  "roleRef": Object {
                    "apiGroup": "rbac.authorization.k8s.io",
                    "kind": "Role",
                    "name": "operator",
                  },
                  "subjects": Array [
                    Object {
                      "apiGroup": "rbac.authorization.k8s.io",
                      "kind": "User",
                      "name": "admin",
                    },
                  ],
                },
                "status": Object {
                  "Validity": Object {},
                },
              },
            ],
            "remediationAction": "inform",
          },
          "status": Object {
            "consoleURL": "https://console-openshift-console.apps.cluster1.dev08.red-chesterfield.com",
            "placementBindings": Array [
              "binding-policy-rolebinding-1",
            ],
            "placementPolicies": Array [
              "placement-policy-rolebinding-1",
            ],
            "status": Object {
              "cluster1": Object {
                "aggregatePoliciesStatus": Object {
                  "policy-rolebinding-1": Object {
                    "compliant": "NonCompliant",
                  },
                },
                "clustername": "cluster1",
                "compliant": "NonCompliant",
              },
              "clusterhub": Object {
                "aggregatePoliciesStatus": Object {
                  "policy-rolebinding-1": Object {
                    "compliant": "NonCompliant",
                  },
                },
                "clustername": "clusterhub",
                "compliant": "NonCompliant",
              },
            },
          },
        },
        "remediation": "inform",
      },
      Object {
        "annotations": Object {
          "categories": "SystemAndInformationIntegrity",
          "controls": "VA",
          "standards": "PCI",
        },
        "clusterCompliant": "1/2/0",
        "metadata": Object {
          "annotations": Object {
            "policy.open-cluster-management.io/categories": "SystemAndInformationIntegrity",
            "policy.open-cluster-management.io/controls": "VA",
            "policy.open-cluster-management.io/standards": "PCI",
            "seed-generation": "1",
          },
          "name": "policy-vulnerabilitypolicy",
          "namespace": "policy-namespace",
          "resourceVersion": "3459668",
          "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/policy-namespace/policies/policy-vulnerabilitypolicy",
        },
        "name": "policy-vulnerabilitypolicy",
        "namespace": "policy-namespace",
        "placementBindings": Array [],
        "placementPolicies": Array [],
        "policyCompliant": "1/2",
        "raw": Object {
          "apiVersion": "policy.open-cluster-management.io/v1",
          "kind": "Policy",
          "metadata": Object {
            "annotations": Object {
              "policy.open-cluster-management.io/categories": "SystemAndInformationIntegrity",
              "policy.open-cluster-management.io/controls": "VA",
              "policy.open-cluster-management.io/standards": "PCI",
              "seed-generation": "1",
            },
            "creationTimestamp": "2019-09-03T18:39:25Z",
            "finalizers": Array [
              "finalizer.policies.ibm.com",
              "propagator.finalizer.mcm.ibm.com",
            ],
            "generation": 13,
            "name": "policy-vulnerabilitypolicy",
            "namespace": "policy-namespace",
            "resourceVersion": "3459668",
            "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/policy-namespace/policies/policy-vulnerabilitypolicy",
            "uid": "2767ac02-ce7a-11e9-a1ed-005056a0b88e",
          },
          "spec": Object {
            "complianceType": "musthave",
            "namespaces": Object {
              "exclude": Array [
                "kube-*",
              ],
              "include": Array [
                "default",
              ],
            },
            "policy-templates": Array [
              Object {
                "objectDefinition": Object {
                  "apiVersion": "policies.ibm.com/v1alpha1",
                  "kind": "VulnerabilityPolicy",
                  "metadata": Object {
                    "label": Object {
                      "category": "System-Integrity",
                    },
                    "name": "va-policy-example",
                  },
                  "spec": Object {
                    "namespaceSelector": Object {
                      "exclude": Array [
                        "kube-system",
                      ],
                      "include": Array [
                        "default",
                        "kube-*",
                      ],
                    },
                    "remediationAction": "inform",
                    "severity": "medium",
                  },
                },
                "status": Object {
                  "Validity": Object {},
                },
              },
            ],
            "remediationAction": "inform",
          },
          "status": Object {
            "consoleURL": "https://console-openshift-console.apps.cluster1.dev08.red-chesterfield.com",
            "placementBindings": Array [
              "binding-policy-vulnerabilitypolicy",
            ],
            "placementPolicies": Array [
              "placement-policy-vulnerabilitypolicy",
            ],
            "status": Object {
              "cluster1": Object {
                "aggregatePoliciesStatus": Object {
                  "policy-vulnerabilitypolicy": Object {
                    "compliant": "Compliant",
                  },
                },
                "clustername": "cluster1",
                "compliant": "Compliant",
              },
              "clusterhub": Object {
                "aggregatePoliciesStatus": Object {
                  "policy-vulnerabilitypolicy": Object {
                    "compliant": "NonCompliant",
                  },
                },
                "clustername": "clusterhub",
                "compliant": "NonCompliant",
              },
            },
          },
        },
        "remediation": "inform",
      },
    ],
  },
}
`;

exports[`Compliance Resolver Query Correctly Resolves Compliance List Query with specific namespace 1`] = `
Object {
  "data": Object {
    "compliances": Array [
      Object {
        "clusterCompliant": "-",
        "metadata": null,
        "name": "",
        "namespace": "",
        "placementBindings": Array [],
        "placementPolicies": Array [],
        "policyCompliant": "0/0",
        "raw": Object {},
        "remediation": "",
      },
    ],
  },
}
`;

exports[`Compliance Resolver Query Correctly Resolves Single Compliance Query 1`] = `
Object {
  "data": Object {
    "compliances": Array [
      Object {
        "clusterCompliant": "0/1/1",
        "compliancePolicies": Array [],
        "compliancePolicy": Array [
          Object {
            "complianceName": "case1-test-policy",
            "complianceNamespace": "default",
            "complianceSelfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/policies/case1-test-policy",
            "detail": Object {
              "exclude_namespace": Array [
                "*",
              ],
              "include_namespace": Array [
                "*",
              ],
            },
            "name": "case1-test-policy",
            "objectTemplates": Array [],
            "raw": Object {
              "apiVersion": "policy.open-cluster-management.io/v1",
              "clusterConsoleURL": Object {},
              "clusterNS": Object {},
              "clusters": Array [
                "0",
              ],
              "kind": "Policy",
              "metadata": Object {
                "annotations": Object {
                  "kubectl.kubernetes.io/last-applied-configuration": "{'apiVersion':'policy.open-cluster-management.io/v1','kind':'Policy','metadata':{'annotations':{'policy.open-cluster-management.io/categories':'PR.DS DataSecurity','policy.open-cluster-management.io/controls':'PR.DS-2 Data-in-transit','policy.open-cluster-management.io/standards':'NIST-CSF'},'name':'case1-test-policy','namespace':'default'},'spec':{'disabled':false,'policy-templates':[{'objectDefinition':{'apiVersion':'policies.ibm.com/v1alpha1','kind':'TrustedContainerPolicy','metadata':{'name':'case1-test-policy-trustedcontainerpolicy'},'spec':{'imageRegistry':'quay.io','namespaceSelector':{'exclude':['kube-system'],'include':['default']},'remediationAction':'inform','severity':'low'}}}],'remediationAction':'inform'}}
",
                  "policy.open-cluster-management.io/categories": "PR.DS DataSecurity",
                  "policy.open-cluster-management.io/controls": "PR.DS-2 Data-in-transit",
                  "policy.open-cluster-management.io/standards": "NIST-CSF",
                },
                "creationTimestamp": "2020-05-15T08:24:33Z",
                "generation": 1,
                "name": "case1-test-policy",
                "namespace": "default",
                "resourceVersion": "27550277",
                "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/policies/case1-test-policy",
                "uid": "e919bf5c-df16-4b90-ae01-a39da7138623",
              },
              "name": "case1-test-policy",
              "namespace": "default",
              "raw": Object {
                "apiVersion": "policy.open-cluster-management.io/v1",
                "kind": "Policy",
                "metadata": Object {
                  "annotations": Object {
                    "kubectl.kubernetes.io/last-applied-configuration": "{'apiVersion':'policy.open-cluster-management.io/v1','kind':'Policy','metadata':{'annotations':{'policy.open-cluster-management.io/categories':'PR.DS DataSecurity','policy.open-cluster-management.io/controls':'PR.DS-2 Data-in-transit','policy.open-cluster-management.io/standards':'NIST-CSF'},'name':'case1-test-policy','namespace':'default'},'spec':{'disabled':false,'policy-templates':[{'objectDefinition':{'apiVersion':'policies.ibm.com/v1alpha1','kind':'TrustedContainerPolicy','metadata':{'name':'case1-test-policy-trustedcontainerpolicy'},'spec':{'imageRegistry':'quay.io','namespaceSelector':{'exclude':['kube-system'],'include':['default']},'remediationAction':'inform','severity':'low'}}}],'remediationAction':'inform'}}
",
                    "policy.open-cluster-management.io/categories": "PR.DS DataSecurity",
                    "policy.open-cluster-management.io/controls": "PR.DS-2 Data-in-transit",
                    "policy.open-cluster-management.io/standards": "NIST-CSF",
                  },
                  "creationTimestamp": "2020-05-15T08:24:33Z",
                  "generation": 1,
                  "name": "case1-test-policy",
                  "namespace": "default",
                  "resourceVersion": "27550277",
                  "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/policies/case1-test-policy",
                  "uid": "e919bf5c-df16-4b90-ae01-a39da7138623",
                },
                "spec": Object {
                  "disabled": false,
                  "policy-templates": Array [
                    Object {
                      "objectDefinition": Object {
                        "apiVersion": "policies.ibm.com/v1alpha1",
                        "kind": "TrustedContainerPolicy",
                        "metadata": Object {
                          "name": "case1-test-policy-trustedcontainerpolicy",
                        },
                        "spec": Object {
                          "imageRegistry": "quay.io",
                          "namespaceSelector": Object {
                            "exclude": Array [
                              "kube-system",
                            ],
                            "include": Array [
                              "default",
                            ],
                          },
                          "remediationAction": "inform",
                          "severity": "low",
                        },
                      },
                    },
                  ],
                  "remediationAction": "inform",
                },
                "status": Object {
                  "consoleURL": "https://console-openshift-console.apps.cluster1.dev08.red-chesterfield.com",
                  "placement": Array [
                    Object {
                      "placementBinding": "case1-test-policy-pb",
                      "placementRule": "case1-test-policy-plr",
                    },
                  ],
                  "status": Array [
                    Object {
                      "clustername": "calamari",
                      "clusternamespace": "calamari",
                    },
                  ],
                },
              },
              "remediation": "inform",
              "spec": Object {
                "disabled": false,
                "policy-templates": Array [
                  Object {
                    "objectDefinition": Object {
                      "apiVersion": "policies.ibm.com/v1alpha1",
                      "kind": "TrustedContainerPolicy",
                      "metadata": Object {
                        "name": "case1-test-policy-trustedcontainerpolicy",
                      },
                      "spec": Object {
                        "imageRegistry": "quay.io",
                        "namespaceSelector": Object {
                          "exclude": Array [
                            "kube-system",
                          ],
                          "include": Array [
                            "default",
                          ],
                        },
                        "remediationAction": "inform",
                        "severity": "low",
                      },
                    },
                  },
                ],
                "remediationAction": "inform",
              },
              "status": Object {
                "consoleURL": "https://console-openshift-console.apps.cluster1.dev08.red-chesterfield.com",
                "placement": Array [
                  Object {
                    "placementBinding": "case1-test-policy-pb",
                    "placementRule": "case1-test-policy-plr",
                  },
                ],
                "status": Array [
                  Object {
                    "clustername": "calamari",
                    "clusternamespace": "calamari",
                  },
                ],
              },
            },
            "roleBindingTemplates": Array [],
            "roleTemplates": Array [],
            "status": null,
          },
        ],
        "complianceStatus": Array [
          Object {
            "clusterNamespace": "0",
            "localCompliantStatus": "0/0",
            "localValidStatus": "0/0",
          },
        ],
        "metadata": Object {
          "creationTimestamp": "2020-05-15T08:24:33Z",
          "name": "case1-test-policy",
          "namespace": "default",
          "resourceVersion": "27550277",
          "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/policies/case1-test-policy",
          "uid": "e919bf5c-df16-4b90-ae01-a39da7138623",
        },
        "placementBindings": Array [],
        "placementPolicies": Array [],
        "policyCompliant": "0/0",
        "raw": Object {
          "apiVersion": "policy.open-cluster-management.io/v1",
          "kind": "Policy",
          "metadata": Object {
            "annotations": Object {
              "kubectl.kubernetes.io/last-applied-configuration": "{'apiVersion':'policy.open-cluster-management.io/v1','kind':'Policy','metadata':{'annotations':{'policy.open-cluster-management.io/categories':'PR.DS DataSecurity','policy.open-cluster-management.io/controls':'PR.DS-2 Data-in-transit','policy.open-cluster-management.io/standards':'NIST-CSF'},'name':'case1-test-policy','namespace':'default'},'spec':{'disabled':false,'policy-templates':[{'objectDefinition':{'apiVersion':'policies.ibm.com/v1alpha1','kind':'TrustedContainerPolicy','metadata':{'name':'case1-test-policy-trustedcontainerpolicy'},'spec':{'imageRegistry':'quay.io','namespaceSelector':{'exclude':['kube-system'],'include':['default']},'remediationAction':'inform','severity':'low'}}}],'remediationAction':'inform'}}
",
              "policy.open-cluster-management.io/categories": "PR.DS DataSecurity",
              "policy.open-cluster-management.io/controls": "PR.DS-2 Data-in-transit",
              "policy.open-cluster-management.io/standards": "NIST-CSF",
            },
            "creationTimestamp": "2020-05-15T08:24:33Z",
            "generation": 1,
            "name": "case1-test-policy",
            "namespace": "default",
            "resourceVersion": "27550277",
            "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/policies/case1-test-policy",
            "uid": "e919bf5c-df16-4b90-ae01-a39da7138623",
          },
          "spec": Object {
            "disabled": false,
            "policy-templates": Array [
              Object {
                "objectDefinition": Object {
                  "apiVersion": "policies.ibm.com/v1alpha1",
                  "kind": "TrustedContainerPolicy",
                  "metadata": Object {
                    "name": "case1-test-policy-trustedcontainerpolicy",
                  },
                  "spec": Object {
                    "imageRegistry": "quay.io",
                    "namespaceSelector": Object {
                      "exclude": Array [
                        "kube-system",
                      ],
                      "include": Array [
                        "default",
                      ],
                    },
                    "remediationAction": "inform",
                    "severity": "low",
                  },
                },
              },
            ],
            "remediationAction": "inform",
          },
          "status": Object {
            "consoleURL": "https://console-openshift-console.apps.cluster1.dev08.red-chesterfield.com",
            "placement": Array [
              Object {
                "placementBinding": "case1-test-policy-pb",
                "placementRule": "case1-test-policy-plr",
              },
            ],
            "status": Array [
              Object {
                "clustername": "calamari",
                "clusternamespace": "calamari",
              },
            ],
          },
        },
      },
    ],
  },
}
`;

exports[`Compliance Resolver Query Correctly Resolves Single Compliance Query without namespace 1`] = `
Object {
  "data": Object {
    "compliances": Array [
      Object {
        "clusterCompliant": "0/1/1",
        "compliancePolicies": Array [],
        "compliancePolicy": Array [
          Object {
            "complianceName": "case1-test-policy",
            "complianceNamespace": "default",
            "complianceSelfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/policies/case1-test-policy",
            "detail": Object {
              "exclude_namespace": Array [
                "*",
              ],
              "include_namespace": Array [
                "*",
              ],
            },
            "name": "case1-test-policy",
            "objectTemplates": Array [],
            "raw": Object {
              "apiVersion": "policy.open-cluster-management.io/v1",
              "clusterConsoleURL": Object {
                "cluster1": "https://console-openshift-console.apps.cluster1.dev08.red-chesterfield.com",
                "local-cluster": "https://console-openshift-console.apps.hub.dev08.red-chesterfield.com",
              },
              "clusterNS": Object {
                "cluster1": "cluster1",
                "local-cluster": "local-cluster",
              },
              "clusters": Array [
                "0",
              ],
              "kind": "Policy",
              "metadata": Object {
                "annotations": Object {
                  "kubectl.kubernetes.io/last-applied-configuration": "{'apiVersion':'policy.open-cluster-management.io/v1','kind':'Policy','metadata':{'annotations':{'policy.open-cluster-management.io/categories':'PR.DS DataSecurity','policy.open-cluster-management.io/controls':'PR.DS-2 Data-in-transit','policy.open-cluster-management.io/standards':'NIST-CSF'},'name':'case1-test-policy','namespace':'default'},'spec':{'disabled':false,'policy-templates':[{'objectDefinition':{'apiVersion':'policies.ibm.com/v1alpha1','kind':'TrustedContainerPolicy','metadata':{'name':'case1-test-policy-trustedcontainerpolicy'},'spec':{'imageRegistry':'quay.io','namespaceSelector':{'exclude':['kube-system'],'include':['default']},'remediationAction':'inform','severity':'low'}}}],'remediationAction':'inform'}}
",
                  "policy.open-cluster-management.io/categories": "PR.DS DataSecurity",
                  "policy.open-cluster-management.io/controls": "PR.DS-2 Data-in-transit",
                  "policy.open-cluster-management.io/standards": "NIST-CSF",
                },
                "creationTimestamp": "2020-05-15T08:24:33Z",
                "generation": 1,
                "name": "case1-test-policy",
                "namespace": "default",
                "resourceVersion": "27550277",
                "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/policies/case1-test-policy",
                "uid": "e919bf5c-df16-4b90-ae01-a39da7138623",
              },
              "name": "case1-test-policy",
              "namespace": "default",
              "raw": Object {
                "apiVersion": "policy.open-cluster-management.io/v1",
                "kind": "Policy",
                "metadata": Object {
                  "annotations": Object {
                    "kubectl.kubernetes.io/last-applied-configuration": "{'apiVersion':'policy.open-cluster-management.io/v1','kind':'Policy','metadata':{'annotations':{'policy.open-cluster-management.io/categories':'PR.DS DataSecurity','policy.open-cluster-management.io/controls':'PR.DS-2 Data-in-transit','policy.open-cluster-management.io/standards':'NIST-CSF'},'name':'case1-test-policy','namespace':'default'},'spec':{'disabled':false,'policy-templates':[{'objectDefinition':{'apiVersion':'policies.ibm.com/v1alpha1','kind':'TrustedContainerPolicy','metadata':{'name':'case1-test-policy-trustedcontainerpolicy'},'spec':{'imageRegistry':'quay.io','namespaceSelector':{'exclude':['kube-system'],'include':['default']},'remediationAction':'inform','severity':'low'}}}],'remediationAction':'inform'}}
",
                    "policy.open-cluster-management.io/categories": "PR.DS DataSecurity",
                    "policy.open-cluster-management.io/controls": "PR.DS-2 Data-in-transit",
                    "policy.open-cluster-management.io/standards": "NIST-CSF",
                  },
                  "creationTimestamp": "2020-05-15T08:24:33Z",
                  "generation": 1,
                  "name": "case1-test-policy",
                  "namespace": "default",
                  "resourceVersion": "27550277",
                  "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/policies/case1-test-policy",
                  "uid": "e919bf5c-df16-4b90-ae01-a39da7138623",
                },
                "spec": Object {
                  "disabled": false,
                  "policy-templates": Array [
                    Object {
                      "objectDefinition": Object {
                        "apiVersion": "policies.ibm.com/v1alpha1",
                        "kind": "TrustedContainerPolicy",
                        "metadata": Object {
                          "name": "case1-test-policy-trustedcontainerpolicy",
                        },
                        "spec": Object {
                          "imageRegistry": "quay.io",
                          "namespaceSelector": Object {
                            "exclude": Array [
                              "kube-system",
                            ],
                            "include": Array [
                              "default",
                            ],
                          },
                          "remediationAction": "inform",
                          "severity": "low",
                        },
                      },
                    },
                  ],
                  "remediationAction": "inform",
                },
                "status": Object {
                  "consoleURL": "https://console-openshift-console.apps.cluster1.dev08.red-chesterfield.com",
                  "placement": Array [
                    Object {
                      "placementBinding": "case1-test-policy-pb",
                      "placementRule": "case1-test-policy-plr",
                    },
                  ],
                  "status": Array [
                    Object {
                      "clustername": "calamari",
                      "clusternamespace": "calamari",
                    },
                  ],
                },
              },
              "remediation": "inform",
              "spec": Object {
                "disabled": false,
                "policy-templates": Array [
                  Object {
                    "objectDefinition": Object {
                      "apiVersion": "policies.ibm.com/v1alpha1",
                      "kind": "TrustedContainerPolicy",
                      "metadata": Object {
                        "name": "case1-test-policy-trustedcontainerpolicy",
                      },
                      "spec": Object {
                        "imageRegistry": "quay.io",
                        "namespaceSelector": Object {
                          "exclude": Array [
                            "kube-system",
                          ],
                          "include": Array [
                            "default",
                          ],
                        },
                        "remediationAction": "inform",
                        "severity": "low",
                      },
                    },
                  },
                ],
                "remediationAction": "inform",
              },
              "status": Object {
                "consoleURL": "https://console-openshift-console.apps.cluster1.dev08.red-chesterfield.com",
                "placement": Array [
                  Object {
                    "placementBinding": "case1-test-policy-pb",
                    "placementRule": "case1-test-policy-plr",
                  },
                ],
                "status": Array [
                  Object {
                    "clustername": "calamari",
                    "clusternamespace": "calamari",
                  },
                ],
              },
            },
            "roleBindingTemplates": Array [],
            "roleTemplates": Array [],
            "status": null,
          },
        ],
        "complianceStatus": Array [
          Object {
            "clusterNamespace": "0",
            "localCompliantStatus": "0/0",
            "localValidStatus": "0/0",
          },
        ],
        "metadata": Object {
          "creationTimestamp": "2020-05-15T08:24:33Z",
          "name": "case1-test-policy",
          "namespace": "default",
          "resourceVersion": "27550277",
          "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/policies/case1-test-policy",
          "uid": "e919bf5c-df16-4b90-ae01-a39da7138623",
        },
        "placementBindings": Array [],
        "placementPolicies": Array [],
        "policyCompliant": "0/0",
        "raw": Object {
          "apiVersion": "policy.open-cluster-management.io/v1",
          "kind": "Policy",
          "metadata": Object {
            "annotations": Object {
              "kubectl.kubernetes.io/last-applied-configuration": "{'apiVersion':'policy.open-cluster-management.io/v1','kind':'Policy','metadata':{'annotations':{'policy.open-cluster-management.io/categories':'PR.DS DataSecurity','policy.open-cluster-management.io/controls':'PR.DS-2 Data-in-transit','policy.open-cluster-management.io/standards':'NIST-CSF'},'name':'case1-test-policy','namespace':'default'},'spec':{'disabled':false,'policy-templates':[{'objectDefinition':{'apiVersion':'policies.ibm.com/v1alpha1','kind':'TrustedContainerPolicy','metadata':{'name':'case1-test-policy-trustedcontainerpolicy'},'spec':{'imageRegistry':'quay.io','namespaceSelector':{'exclude':['kube-system'],'include':['default']},'remediationAction':'inform','severity':'low'}}}],'remediationAction':'inform'}}
",
              "policy.open-cluster-management.io/categories": "PR.DS DataSecurity",
              "policy.open-cluster-management.io/controls": "PR.DS-2 Data-in-transit",
              "policy.open-cluster-management.io/standards": "NIST-CSF",
            },
            "creationTimestamp": "2020-05-15T08:24:33Z",
            "generation": 1,
            "name": "case1-test-policy",
            "namespace": "default",
            "resourceVersion": "27550277",
            "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/policies/case1-test-policy",
            "uid": "e919bf5c-df16-4b90-ae01-a39da7138623",
          },
          "spec": Object {
            "disabled": false,
            "policy-templates": Array [
              Object {
                "objectDefinition": Object {
                  "apiVersion": "policies.ibm.com/v1alpha1",
                  "kind": "TrustedContainerPolicy",
                  "metadata": Object {
                    "name": "case1-test-policy-trustedcontainerpolicy",
                  },
                  "spec": Object {
                    "imageRegistry": "quay.io",
                    "namespaceSelector": Object {
                      "exclude": Array [
                        "kube-system",
                      ],
                      "include": Array [
                        "default",
                      ],
                    },
                    "remediationAction": "inform",
                    "severity": "low",
                  },
                },
              },
            ],
            "remediationAction": "inform",
          },
          "status": Object {
            "consoleURL": "https://console-openshift-console.apps.cluster1.dev08.red-chesterfield.com",
            "placement": Array [
              Object {
                "placementBinding": "case1-test-policy-pb",
                "placementRule": "case1-test-policy-plr",
              },
            ],
            "status": Array [
              Object {
                "clustername": "calamari",
                "clusternamespace": "calamari",
              },
            ],
          },
        },
      },
      Object {
        "clusterCompliant": "2/2/0",
        "compliancePolicies": Array [],
        "compliancePolicy": Array [
          Object {
            "complianceName": "test-policy",
            "complianceNamespace": "default",
            "complianceSelfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/policies/test-policy",
            "detail": Object {
              "exclude_namespace": Array [
                "*",
              ],
              "include_namespace": Array [
                "*",
              ],
            },
            "name": "test-policy",
            "objectTemplates": Array [],
            "raw": Object {
              "apiVersion": "policy.open-cluster-management.io/v1",
              "clusterConsoleURL": Object {
                "cluster1": "https://console-openshift-console.apps.cluster1.dev08.red-chesterfield.com",
                "local-cluster": "https://console-openshift-console.apps.hub.dev08.red-chesterfield.com",
              },
              "clusterNS": Object {
                "cluster1": "cluster1",
                "local-cluster": "local-cluster",
              },
              "clusters": Array [
                "0",
                "1",
              ],
              "kind": "Policy",
              "metadata": Object {
                "annotations": Object {
                  "policy.open-cluster-management.io/categories": "PR.AC Identity Management Authentication and Access Control",
                  "policy.open-cluster-management.io/controls": "PR.AC-4 Access Control",
                  "policy.open-cluster-management.io/standards": "NIST-CSF",
                },
                "creationTimestamp": "2020-11-03T19:21:39Z",
                "generation": 3,
                "managedFields": Array [
                  Object {
                    "apiVersion": "policy.open-cluster-management.io/v1",
                    "fieldsType": "FieldsV1",
                    "fieldsV1": Object {
                      "f:status": Object {
                        ".": Object {},
                        "f:placement": Object {},
                        "f:status": Object {},
                      },
                    },
                    "manager": "governance-policy-propagator",
                    "operation": "Update",
                    "time": "2020-11-03T22:03:49Z",
                  },
                  Object {
                    "apiVersion": "policy.open-cluster-management.io/v1",
                    "fieldsType": "FieldsV1",
                    "fieldsV1": Object {
                      "f:metadata": Object {
                        "f:annotations": Object {
                          ".": Object {},
                          "f:policy.open-cluster-management.io/categories": Object {},
                          "f:policy.open-cluster-management.io/controls": Object {},
                          "f:policy.open-cluster-management.io/standards": Object {},
                        },
                      },
                      "f:spec": Object {
                        ".": Object {},
                        "f:disabled": Object {},
                        "f:policy-templates": Object {},
                        "f:remediationAction": Object {},
                      },
                    },
                    "manager": "unknown",
                    "operation": "Update",
                    "time": "2020-11-03T22:03:49Z",
                  },
                ],
                "name": "test-policy",
                "namespace": "default",
                "resourceVersion": "27822459",
                "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/policies/test-policy",
                "uid": "0799c99e-de36-4899-9733-818e23e2cab3",
              },
              "name": "test-policy",
              "namespace": "default",
              "raw": Object {
                "apiVersion": "policy.open-cluster-management.io/v1",
                "kind": "Policy",
                "metadata": Object {
                  "annotations": Object {
                    "policy.open-cluster-management.io/categories": "PR.AC Identity Management Authentication and Access Control",
                    "policy.open-cluster-management.io/controls": "PR.AC-4 Access Control",
                    "policy.open-cluster-management.io/standards": "NIST-CSF",
                  },
                  "creationTimestamp": "2020-11-03T19:21:39Z",
                  "generation": 3,
                  "managedFields": Array [
                    Object {
                      "apiVersion": "policy.open-cluster-management.io/v1",
                      "fieldsType": "FieldsV1",
                      "fieldsV1": Object {
                        "f:status": Object {
                          ".": Object {},
                          "f:placement": Object {},
                          "f:status": Object {},
                        },
                      },
                      "manager": "governance-policy-propagator",
                      "operation": "Update",
                      "time": "2020-11-03T22:03:49Z",
                    },
                    Object {
                      "apiVersion": "policy.open-cluster-management.io/v1",
                      "fieldsType": "FieldsV1",
                      "fieldsV1": Object {
                        "f:metadata": Object {
                          "f:annotations": Object {
                            ".": Object {},
                            "f:policy.open-cluster-management.io/categories": Object {},
                            "f:policy.open-cluster-management.io/controls": Object {},
                            "f:policy.open-cluster-management.io/standards": Object {},
                          },
                        },
                        "f:spec": Object {
                          ".": Object {},
                          "f:disabled": Object {},
                          "f:policy-templates": Object {},
                          "f:remediationAction": Object {},
                        },
                      },
                      "manager": "unknown",
                      "operation": "Update",
                      "time": "2020-11-03T22:03:49Z",
                    },
                  ],
                  "name": "test-policy",
                  "namespace": "default",
                  "resourceVersion": "27822459",
                  "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/policies/test-policy",
                  "uid": "0799c99e-de36-4899-9733-818e23e2cab3",
                },
                "spec": Object {
                  "disabled": false,
                  "policy-templates": Array [
                    Object {
                      "objectDefinition": Object {
                        "apiVersion": "policy.open-cluster-management.io/v1",
                        "kind": "ConfigurationPolicy",
                        "metadata": Object {
                          "name": "test-policy-sample-role",
                        },
                        "spec": Object {
                          "namespaceSelector": Object {
                            "exclude": Array [
                              "kube-*",
                            ],
                            "include": Array [
                              "default",
                            ],
                          },
                          "object-templates": Array [
                            Object {
                              "complianceType": "mustonlyhave",
                              "objectDefinition": Object {
                                "apiVersion": "rbac.authorization.k8s.io/v1",
                                "kind": "Role",
                                "metadata": Object {
                                  "name": "sample-role",
                                },
                                "rules": Array [
                                  Object {
                                    "apiGroups": Array [
                                      "extensions",
                                      "apps",
                                    ],
                                    "resources": Array [
                                      "deployments",
                                    ],
                                    "verbs": Array [
                                      "get",
                                      "list",
                                      "watch",
                                      "delete",
                                      "patch",
                                    ],
                                  },
                                ],
                              },
                            },
                          ],
                          "remediationAction": "inform",
                          "severity": "high",
                        },
                      },
                    },
                  ],
                  "remediationAction": "inform",
                },
                "status": Object {
                  "placement": Array [
                    Object {
                      "placementBinding": "binding-test-policy",
                      "placementRule": "placement-test-policy",
                    },
                  ],
                  "status": Array [
                    Object {
                      "clustername": "local-cluster",
                      "clusternamespace": "local-cluster",
                      "compliant": "NonCompliant",
                    },
                    Object {
                      "clustername": "cluster1",
                      "clusternamespace": "cluster1",
                      "compliant": "NonCompliant",
                    },
                  ],
                },
              },
              "remediation": "inform",
              "spec": Object {
                "disabled": false,
                "policy-templates": Array [
                  Object {
                    "objectDefinition": Object {
                      "apiVersion": "policy.open-cluster-management.io/v1",
                      "kind": "ConfigurationPolicy",
                      "metadata": Object {
                        "name": "test-policy-sample-role",
                      },
                      "spec": Object {
                        "namespaceSelector": Object {
                          "exclude": Array [
                            "kube-*",
                          ],
                          "include": Array [
                            "default",
                          ],
                        },
                        "object-templates": Array [
                          Object {
                            "complianceType": "mustonlyhave",
                            "objectDefinition": Object {
                              "apiVersion": "rbac.authorization.k8s.io/v1",
                              "kind": "Role",
                              "metadata": Object {
                                "name": "sample-role",
                              },
                              "rules": Array [
                                Object {
                                  "apiGroups": Array [
                                    "extensions",
                                    "apps",
                                  ],
                                  "resources": Array [
                                    "deployments",
                                  ],
                                  "verbs": Array [
                                    "get",
                                    "list",
                                    "watch",
                                    "delete",
                                    "patch",
                                  ],
                                },
                              ],
                            },
                          },
                        ],
                        "remediationAction": "inform",
                        "severity": "high",
                      },
                    },
                  },
                ],
                "remediationAction": "inform",
              },
              "status": Object {
                "placement": Array [
                  Object {
                    "placementBinding": "binding-test-policy",
                    "placementRule": "placement-test-policy",
                  },
                ],
                "status": Array [
                  Object {
                    "clustername": "local-cluster",
                    "clusternamespace": "local-cluster",
                    "compliant": "NonCompliant",
                  },
                  Object {
                    "clustername": "cluster1",
                    "clusternamespace": "cluster1",
                    "compliant": "NonCompliant",
                  },
                ],
              },
            },
            "roleBindingTemplates": Array [],
            "roleTemplates": Array [],
            "status": null,
          },
        ],
        "complianceStatus": Array [
          Object {
            "clusterNamespace": "0",
            "localCompliantStatus": "0/0",
            "localValidStatus": "0/0",
          },
          Object {
            "clusterNamespace": "1",
            "localCompliantStatus": "0/0",
            "localValidStatus": "0/0",
          },
        ],
        "metadata": Object {
          "creationTimestamp": "2020-11-03T19:21:39Z",
          "name": "test-policy",
          "namespace": "default",
          "resourceVersion": "27822459",
          "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/policies/test-policy",
          "uid": "0799c99e-de36-4899-9733-818e23e2cab3",
        },
        "placementBindings": Array [],
        "placementPolicies": Array [],
        "policyCompliant": "0/0",
        "raw": Object {
          "apiVersion": "policy.open-cluster-management.io/v1",
          "kind": "Policy",
          "metadata": Object {
            "annotations": Object {
              "policy.open-cluster-management.io/categories": "PR.AC Identity Management Authentication and Access Control",
              "policy.open-cluster-management.io/controls": "PR.AC-4 Access Control",
              "policy.open-cluster-management.io/standards": "NIST-CSF",
            },
            "creationTimestamp": "2020-11-03T19:21:39Z",
            "generation": 3,
            "managedFields": Array [
              Object {
                "apiVersion": "policy.open-cluster-management.io/v1",
                "fieldsType": "FieldsV1",
                "fieldsV1": Object {
                  "f:status": Object {
                    ".": Object {},
                    "f:placement": Object {},
                    "f:status": Object {},
                  },
                },
                "manager": "governance-policy-propagator",
                "operation": "Update",
                "time": "2020-11-03T22:03:49Z",
              },
              Object {
                "apiVersion": "policy.open-cluster-management.io/v1",
                "fieldsType": "FieldsV1",
                "fieldsV1": Object {
                  "f:metadata": Object {
                    "f:annotations": Object {
                      ".": Object {},
                      "f:policy.open-cluster-management.io/categories": Object {},
                      "f:policy.open-cluster-management.io/controls": Object {},
                      "f:policy.open-cluster-management.io/standards": Object {},
                    },
                  },
                  "f:spec": Object {
                    ".": Object {},
                    "f:disabled": Object {},
                    "f:policy-templates": Object {},
                    "f:remediationAction": Object {},
                  },
                },
                "manager": "unknown",
                "operation": "Update",
                "time": "2020-11-03T22:03:49Z",
              },
            ],
            "name": "test-policy",
            "namespace": "default",
            "resourceVersion": "27822459",
            "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/policies/test-policy",
            "uid": "0799c99e-de36-4899-9733-818e23e2cab3",
          },
          "spec": Object {
            "disabled": false,
            "policy-templates": Array [
              Object {
                "objectDefinition": Object {
                  "apiVersion": "policy.open-cluster-management.io/v1",
                  "kind": "ConfigurationPolicy",
                  "metadata": Object {
                    "name": "test-policy-sample-role",
                  },
                  "spec": Object {
                    "namespaceSelector": Object {
                      "exclude": Array [
                        "kube-*",
                      ],
                      "include": Array [
                        "default",
                      ],
                    },
                    "object-templates": Array [
                      Object {
                        "complianceType": "mustonlyhave",
                        "objectDefinition": Object {
                          "apiVersion": "rbac.authorization.k8s.io/v1",
                          "kind": "Role",
                          "metadata": Object {
                            "name": "sample-role",
                          },
                          "rules": Array [
                            Object {
                              "apiGroups": Array [
                                "extensions",
                                "apps",
                              ],
                              "resources": Array [
                                "deployments",
                              ],
                              "verbs": Array [
                                "get",
                                "list",
                                "watch",
                                "delete",
                                "patch",
                              ],
                            },
                          ],
                        },
                      },
                    ],
                    "remediationAction": "inform",
                    "severity": "high",
                  },
                },
              },
            ],
            "remediationAction": "inform",
          },
          "status": Object {
            "placement": Array [
              Object {
                "placementBinding": "binding-test-policy",
                "placementRule": "placement-test-policy",
              },
            ],
            "status": Array [
              Object {
                "clustername": "local-cluster",
                "clusternamespace": "local-cluster",
                "compliant": "NonCompliant",
              },
              Object {
                "clustername": "cluster1",
                "clusternamespace": "cluster1",
                "compliant": "NonCompliant",
              },
            ],
          },
        },
      },
    ],
  },
}
`;
